--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main-container">
         <ul class="list">
             <li class="list-item">Hola</li>
-            <li class="list-item">Hola</li>
+            <li class="list-item">Mi amigo</li>
             <li class="list-item">Hola</li>
             <li class="list-item">Hola</li>
             <li class="list-item">Hola</li>
