Agregue las carpetas que faltaban

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <ul class="list">
             <li class="list-item">Hola</li>
             <li class="list-item">Mi amigo</li>
-            <li class="list-item">Hola</li>
-            <li class="list-item">Hola</li>
-            <li class="list-item">Hola</li>
+            <li class="list-item">Peleas como mi hermana</li>
+            <li class="list-item">Con tu hermana he peleado</li>
+            <li class="list-item">Eso es un cumplido</li>
         </ul>
     </div>
 </body>
