hasta el capitulo 9

--- a/lounge/beverages/elixir.html
+++ b/lounge/beverages/elixir.html
@@ -40,7 +40,7 @@
       in this vitamin C rich elixir.
     </p>
     <p>
-	<a href="../lounge.html">Back to the Lounge</a>
+	<a href="../newlounge.html">Back to the Lounge</a>
     </p>
   </body>
 </html>
