--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
             <li class="list-item">Eso es un cumplido</li>
         </ul>
     </div>
+
+    <div class="links">
+        <ul>
+            <h1>Proyectos de Head First HTML and CSS</h1>
+            <li><a title="Lounge" href="lounge/newlounge.html">Lounge</a></li>
+            <li><a title="myPod" href="mypod/mypod.html">myPod</a></li>
+            <li><a title="Starbuzz" href="Starbuzz/starbuzz.html">Starbuzz</a></li>
+        </ul>
+    </div>
 </body>
 </html>
