Hasta el capitulo 11 inclusivo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Proyectos de Head First HTML and CSS</h1>
             <li><a title="Lounge" href="lounge/newlounge.html">Lounge</a></li>
             <li><a title="myPod" href="mypod/mypod.html">myPod</a></li>
-            <li><a title="Starbuzz" href="Starbuzz/starbuzz.html">Starbuzz</a></li>
+            <li><a title="Starbuzz" href="Starbuzz/index.html">Starbuzz</a></li>
         </ul>
     </div>
 </body>
