--- a/lounge/newlounge.html
+++ b/lounge/newlounge.html
@@ -109,7 +109,7 @@
     <ul>
       <li><span class="cd">Buddha Bar</span>, <span class="artist">Challe</span></li>
       <li><span class="cd">It Falls</span>, <span class="artist"> Zero 7</span></li>
-      <li><span class="cd">Earth 7</span>, <span class="artist">Bukem</span></li>
+      <li><span class="cd">Earth 7</span>, <span class="artist">L.T.J. Bukem</span></li>
       <li><span class="cd">Roi Est Mort, Vive Le Roi!</span>, <span class="artist">Enigma</span></li>
       <li><span class="cd">Music for Airports</span>, <span class="artist">Brian Eno</span></li>
     </ul>
