todo hasta el cap 13

--- a/Journal/journal.html
+++ b/Journal/journal.html
@@ -6,60 +6,138 @@
 	<link rel="stylesheet" href="journal.css">
 </head>
 <body>
-	<h1>Segway'n USA</h1>
-	<p>
-	 Docummenting my trip around the US on my very own Segway!
-	</p>
+	<article>
+		<h1>Segway'n USA</h1>
+		<p>
+			Docummenting my trip around the US on my very own Segway!
+		</p>
+	</article>
+	
+	<article>
+		<h2>August 20, 2012</h2>
+		<img src="images/segway2.jpg">
+		<p>
+			Well, I made it 1200 miles already, and I passed 
+			through some interesting places on the way: 
+		</p>
+		
+		<table>
+			<caption>
+				The places I visited on my Segway'n USA travels
+			</caption>
+			<tr>
+			  <th>City</th>
+			  <th>Date</th>
+			  <th>Temperature</th>
+			  <th>Altitude</th>
+			  <th>Population</th>
+			  <th>Diner Rating</th>
+			</tr>
+			<tr>
+			  <th class="leftAlligned">Walla Walla, WA</td>
+			  <td>June 15th</td>
+			  <td>75</td>
+			  <td class="rightAlligned">1,204 ft</td>
+			  <td class="rightAlligned">29,686</td>
+			  <td>4/5</td>
+			</tr>
+			<tr class="cellColor">
+			  <th class="leftAlligned">Magic City, ID</td>
+			  <td>June 25th</td>
+			  <td>74</td>
+			  <td class="rightAlligned">5,312 ft</td>
+			  <td class="rightAlligned">50</td>
+			  <td>3/5</td>
+			</tr>
+			<tr>
+				<th class="leftAlligned">Bountiful, UT</th>
+				<td>July 10</td>
+				<td>91</td>
+				<td class="rightAlligned">4,226 ft</td>
+				<td class="rightAlligned">41,173</td>
+				<td>4/5</td>
+			</tr>
+			<tr class="cellColor">
+				<th class="leftAlligned">Last Chance, CO</th>
+				<td>July 23</td>
+				<td>102</td>
+				<td class="rightAlligned">4,780 ft</td>
+				<td class="rightAlligned">265</td>
+				<td>3/5</td>
+			</tr>
+			<tr>
+				<th class="leftAlligned" rowspan="2">Truth or Consequences, NM</th>
+				<td>August 9</td>
+				<td>93</td>
+				<td class="rightAlligned" rowspan="2">4,242 ft</td>
+				<td class="rightAlligned" rowspan="2">7289</td>
+				<td>5/5</td>
+			</tr>
+			<tr>
+				<td>August 27th</td>
+				<td>98</td>
+				<td>
+					<table>
+						<tr>
+							<th class="Tess">Tess</th>
+							<td>5/5</td>	
+						</tr>
+						<tr>
+							<th class="Tony">Tony</th>
+							<td>4/5</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr class="cellColor">
+				<th class="leftAlligned">Why, AZ</th>
+				<td>August 18</td>
+				<td>104</td>
+				<td class="rightAlligned">860 ft</td>
+				<td class="rightAlligned">480</td>
+				<td>3/5</td>
+			</tr>
+		  </table>
+	</article>
 
-	<h2>August 20, 2012</h2>
-	<img src="images/segway2.jpg">
-	<p>
-	 Well, I made it 1200 miles already, and I passed 
-	 through some interesting places on the way: 
-	</p>
-	<ol>
-		<li>Walla Walla, WA</li> 
-		<li>Magic City, ID</li>
-		<li>Bountiful, UT</li> 
-		<li>Last Chance, CO</li>
-		<li>Truth or Consequences, NM</li>
-		<li>Why, AZ</li>
-	</ol>
+	<article>
+		<h2>July 14, 2012</h2>
+		<p>
+			I saw some Burna Shave style on the side of the
+			road today:
+			<p>
+				<blockquote>
+					Passing cars, <br>
+			 When you can't see, <br> 
+			 May get you, <br>
+			 A glimpse, <br>
+			 Of eternity. <br>
+			</blockquote> 	 	 
+		</p>
+		 I definitely won't be passing any cars.
+		</p>
+	</article>
 
-	<h2>July 14, 2012</h2>
-	<p>
-	 I saw some Burna Shave style on the side of the
-	 road today:
-	<p>
-		<blockquote>
-	 	 Passing cars, <br>
-		 When you can't see, <br> 
-		 May get you, <br>
-		 A glimpse, <br>
-		 Of eternity. <br>
-		</blockquote> 	 	 
-	</p>
-	 I definitely won't be passing any cars.
-	</p>
-
-	<h2>June 2, 2012</h2>
-	<img src="images/segway1.jpg">
-	<p>
-	 My first day of the trip! I can't believe I finally got
-	 everything packed and ready to go. Because I'm on a Segway,
-	 I wasn't able to bring a whole lot with me:
-	</p>
-	<ul>
-		<li>cell phone</li>
-		<li>iPod</li>
-		<li>digital camera</li> 
-		<li>and a protein bar</li>
-	</ul>
-	<p> 
-	 Just the essentials. As
-	 Lao Tzu would have said, <q>A journey of a thousand miles begins
-	 with one Segway.</q> 
-	</p>
+	<article>		
+		<h2>June 2, 2012</h2>
+		<img src="images/segway1.jpg">
+		<p>
+		 My first day of the trip! I can't believe I finally got
+		 everything packed and ready to go. Because I'm on a Segway,
+		 I wasn't able to bring a whole lot with me:
+		</p>
+		<ul>
+			<li>cell phone</li>
+			<li>iPod</li>
+			<li>digital camera</li> 
+			<li>and a protein bar</li>
+		</ul>
+		<p> 
+		 Just the essentials. As
+		 Lao Tzu would have said, <q>A journey of a thousand miles begins
+		 with one Segway.</q> 
+		</p>
+	</article>
 
 </body>
 </html>
